// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. saved star with saved status 1`] = `
Array [
  <div>
    Saved
  </div>,
  <a>
    <div>
      <svg
        aria-label="[title]"
        height={18}
        role="img"
        viewBox="0 0 21 20"
        width={18}
      >
        <title>
          Save to My Articles
        </title>
        <path
          d="M16.0321915,18.681086 L13.9014848,12.1628241 L19.4524784,8.14270857 L12.6019503,8.15770268 L10.5,1.63105093 L8.39804966,8.15770268 L1.54752164,8.14270857 L7.09851524,12.1628241 L4.96780845,18.681086 L10.5,14.6375865 L16.0321915,18.681086 Z"
          fill="#006699"
          stroke="#696969"
        />
      </svg>
    </div>
  </a>,
]
`;

exports[`2. saved star with unsaved status 1`] = `
Array [
  <div>
    Save  
  </div>,
  <a>
    <div>
      <svg
        aria-label="[title]"
        height={18}
        role="img"
        viewBox="0 0 21 20"
        width={18}
      >
        <title>
          Save to My Articles
        </title>
        <path
          d="M16.0321915,18.681086 L13.9014848,12.1628241 L19.4524784,8.14270857 L12.6019503,8.15770268 L10.5,1.63105093 L8.39804966,8.15770268 L1.54752164,8.14270857 L7.09851524,12.1628241 L4.96780845,18.681086 L10.5,14.6375865 L16.0321915,18.681086 Z"
          fill="#FFFFFF"
          stroke="#696969"
        />
      </svg>
    </div>
  </a>,
]
`;

exports[`3. saved star with loading state while network request is fetching data 1`] = `
Array [
  <div>
    Save  
  </div>,
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    role="progressbar"
  >
    <div>
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
        />
      </svg>
    </div>
  </div>,
]
`;
